tests/parse_print/random_perturb/enum_liberated/change-08/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/change-08/change-08.essence:1:10:
language name has to be Essence, but given: Essen
    language Essen`e 1.3
             ^